Seeded Initial Data

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# PostgreSQL credentials
-DATABASE_URL=postgres://postgres:Bossman963@localhost:5432/noc_fault_logger
+
+DATABASE_URL=postgresql://noc_fault_logger_user:JBUbO9tweroBA5SI4zyzAMQiWss1x2kt@dpg-d2e77f49c44c73eggj50-a.frankfurt-postgres.render.com/noc_fault_logger
 PORT=5000
 JWT_SECRET=your_secret_key_here
 NODE_ENV=development
